-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
-
7ed88eb56 (dev), b141854d7 (6.9), c47b638c2 (6.8)
Why?
Cause
- As a developer I want my QML types resolved. Now when the QML type is derived from an external module other than installed ones this does not work.
- This can be fixed by finding a proper way of resolving QML imports and adding them to the qmldom arguments where it's being invoked from androiddeployqt.
(seeQTBUG-127554)
Customer
- Android Developer using QtDS and AS
Cruft
- Also generic and not only QtDS
What?
Definition
- Improve qmldir path discovery in ADQt code generator by finding a proper way of resolving QML imports and adding them to the qmldom arguments where it's being invoked from androiddeployqt
- The attached project does not work out of the box because if several reasons including above:
-
- The App/main.cpp handles QQuickView creation which conflicts with QtQuickView
- The QtDSProjectContent/App.qml as the component which is going to be loaded by QtQuickView (currently loaded in main.cpp as an input tho QQmlApplicationEngine) already has a Window root. This is not allowed by QtQuickView because it expects to instantiate QQuickView as the main window.
- Raised by this issuse: even if we fix the QtDS project with the above, building the project will fail if QT_ANDROID_GENERATE_JAVA_QTQUICKVIEW_CONTENTS is provided to be ON as a cmake variable.
QtDSProject.tar.gz
Demarcation
- Design Studio changes not needed
Dependencies
- FF due to androiddeployqt changes
QTBUG-125891?
- clones
-
QTBUG-125891 QtDS compatibility - Handling dotted URI QML modules
-
- Closed
-
- is required for
-
QTBUG-125088 Embedded QML and Qt Quick for Android on Qt 6.9
-
- Closed
-
- relates to
-
QTBUG-129031 Add special specs of the app entry point main{}
-
- Closed
-
-
QTBUG-127554 Android studio and QT DS projects are not compatible
-
- Closed
-
For Gerrit Dashboard: QTBUG-125892 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
602864,17 | Android: Improve qmldir discovery of QML to Java codegen | dev | qt/qtbase | Status: MERGED | +2 | 0 |
617884,2 | Android: Improve qmldir discovery of QML to Java codegen | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
618065,2 | Android: Improve qmldir discovery of QML to Java codegen | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |